Build out Social properties template for refactored homepage * Tweak button styles * Refactor frontpage styles

--- a/wp-content/themes/soss-catalog-theme/assets/styles/common/_variables.scss
+++ b/wp-content/themes/soss-catalog-theme/assets/styles/common/_variables.scss
@@ -115,6 +115,7 @@ $gray-lightest:             #f7f7f9;
 // Reassign color vars to semantic color scheme
 $brand-primary:             $red;
 $brand-primary-hover:       darken($brand-primary, 5%);
+$brand-primary-dark:       darken($brand-primary, 10%);
 $brand-success:             $red; //$green;
 $brand-info:                $blue;
 $brand-warning:             $orange;
