--- a/wp-content/themes/soss-catalog-theme/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/soss-catalog-theme/assets/styles/layouts/_header.scss
@@ -46,198 +46,189 @@
   flex-direction: row;
   width: 100%;
 
+  .request-quote {
+    margin: 0; // over-rides .cta-brand
+  }
+}
   .logo {
     .brand-logo { // logo image
       height: auto;
       margin: 1rem 0;
       display: inline-block;
+      position: relative;
+      z-index: 10;
     }
   }
-  .member-services {
-    display: flex;
-    flex-direction: row;
-    .search-bar { // search form
-      display: inline-flex;
-      margin-right: 0.6rem;
-      align-items: center;
-      justify-content: flex-end;
-    }
-    .account-login { // login and cart buttons
-      display: inline-flex;
-      align-items: center; // vertical
-      justify-content: flex-end;
-      a {
-        padding: 0 .5rem;
-        svg {
-          fill: $brand-primary;
-          transition: all ease 0.3s;
-          &::hover {
-            fill: $brand-primary-hover;
+
+
+  // My Account in Menu
+  #mega-menu-wrap-primary_navigation {
+    #mega-menu-primary_navigation {
+      & > li {
+        &:last-child {
+          & > .my-Account-nav {
+            display: flex;
+            justify-self: flex-end;
+            padding: 10px;
+            line-height: 1.6;
+            height: 40px;
           }
         }
-    }
-      .basket-link {
-      margin-right: 0.5rem;}
-    }
-  }
-}
 
-
-// My Account in Menu
-#mega-menu-wrap-primary_navigation {
-  #mega-menu-primary_navigation {
-    &> li {
-      &:last-child {
-        &> .my-Account-nav {
-          display: flex;
-          justify-self: flex-end;
-          padding: 10px;
-          line-height: 1.6;
-          height: 40px;
-        }
-      }
-      &.mega-menu-megamenu {
-        &> .mega-sub-menu {
-          &> .mega-menu-row {
-            .mega-menu-column {
-              &.mega-sub-menu {
-                &.mega-menu-item {
-                  padding: 0 !important;
+        &.mega-menu-megamenu {
+          & > .mega-sub-menu {
+            & > .mega-menu-row {
+              .mega-menu-column {
+                &.mega-sub-menu {
+                  &.mega-menu-item {
+                    padding: 0 !important;
+                  }
                 }
               }
             }
           }
         }
-    }
-  }
-}
-  $list-item-padding: 0.2rem;
-  // Mega Menu Widget Type called 'Navigation Menus'
-  #menu-product-category,
-  .product-categories {
-    list-style-type: none;
-    padding: 0;
-    .nav-item,
-    .cat-item {
-      padding: $list-item-padding 0 !important;
-      a {
-        padding: 0;
       }
     }
-  }
- .woocommerce-widget-layered-nav-list__item {
-    &.wc-layered-nav-term {
-      padding: $list-item-padding 0;
-    }
-  }
-  background: transparent !important;
 
-  &> .mega-menu-link {
-    color: $brand-primary;
-    text-transform: uppercase;
-  }
+    $list-item-padding: 0.2rem;
+    // Mega Menu Widget Type called 'Navigation Menus'
+    #menu-product-category,
+    .product-categories {
+      list-style-type: none;
+      padding: 0;
 
-  .mega-menu-toggle {
+      .nav-item,
+      .cat-item {
+        padding: $list-item-padding 0 !important;
 
-
-
-    // close block (mobile)
-    &.mega-menu-open {
-      .mega-toggle-block-1:before {
-        font-size: 30px;
-        margin-right: 4px;
-      }
-    }
-    .mega-toggle-block-right {
-      width: 90px;
-      position: absolute;
-      top: -4.5rem;
-      right: 0;
-
-      // fixes bug where mega menu toggle button link
-      // expanded to full height of viewport
-      height: 40px !important;
-    }
-    .mega-toggle-block-1:before {
-      font-size: 40px;
-      font-weight: 300;
-      float: right;
-    }
-    &.mega-menu-close {
-      display: none;
-    }
-  }
-  #mega-menu-primary_navigation {
-    &>.mega-menu-item {
-      &>.mega-menu-link {
-        transition: all ease 0.3s;
-        text-transform: uppercase !important; // this works
-        color: $brand-primary !important;
-        &:hover {
-          background: rgb(189, 189, 189) !important;
+        a {
+          padding: 0;
         }
       }
     }
 
-
-    &> .mega-browse__category {
-      // have to force because of plugin
-
-      border-top: 10px solid darken($brand-primary, 10%) !important;
-      //border-bottom: 5px solid $brand-primary !important;
-      margin-top: -10px !important;
-
-      &> .mega-menu-link {
-        background: linear-gradient(to bottom, darken($brand-primary, 10%) 0%, $brand-primary 100%) !important;
-        text-transform: uppercase !important; // this works
-        color: white !important;
-        font-weight: 500 !important;
-        padding-left: 3rem !important;
-        padding-right: 3rem !important;
-
-        &:hover {
-          background: darken($brand-primary, 10%) !important;
-        }
-
-        &:after {
-          display: inline-block !important;
-          content: ""!important;
-          position: absolute!important;
-          top: -9px!important;
-          right: -8px!important;
-          width: 0!important;
-          height: 0!important;
-          border-bottom: 10px solid rgb(93, 93, 93) !important;
-          border-right: 8px solid rgba(0, 0, 0, 0) !important;
-
-        }
+    .woocommerce-widget-layered-nav-list__item {
+      &.wc-layered-nav-term {
+        padding: $list-item-padding 0;
       }
     }
-  }
-}
 
-.mega-sticky-wrapper {
-  #mega-menu-wrap-primary_navigation {
+    background: transparent !important;
+
+    & > .mega-menu-link {
+      color: $brand-primary;
+      text-transform: uppercase;
+    }
+
     .mega-menu-toggle {
-      height: 40px;
-      background: rgba(white, 0.8);
+
+
+      // close block (mobile)
+      &.mega-menu-open {
+        .mega-toggle-block-1:before {
+          font-size: 30px;
+          margin-right: 4px;
+        }
+      }
+
       .mega-toggle-block-right {
-        position: fixed;
-        top: 0;
-        right: 2rem;
+        width: 90px;
+        position: absolute;
+        top: -4.5rem;
+        right: 0;
+
+        // fixes bug where mega menu toggle button link
+        // expanded to full height of viewport
+        height: 40px !important;
+      }
+
+      .mega-toggle-block-1:before {
+        font-size: 40px;
+        font-weight: 300;
+        float: right;
+      }
+
+      &.mega-menu-close {
+        display: none;
+      }
+    }
+
+    #mega-menu-primary_navigation {
+      & > .mega-menu-item {
+        & > .mega-menu-link {
+          transition: all ease 0.3s;
+          text-transform: uppercase !important; // this works
+          color: $brand-primary !important;
+
+          &:hover {
+            background: rgb(189, 189, 189) !important;
+          }
+        }
+      }
+
+
+      & > .mega-browse__category {
+        // have to force because of plugin
+
+        border-top: 10px solid darken($brand-primary, 10%) !important;
+        //border-bottom: 5px solid $brand-primary !important;
+        margin-top: -10px !important;
+
+        & > .mega-menu-link {
+          background: linear-gradient(to bottom, darken($brand-primary, 10%) 0%, $brand-primary 100%) !important;
+          text-transform: uppercase !important; // this works
+          color: white !important;
+          font-weight: 500 !important;
+          padding-left: 3rem !important;
+          padding-right: 3rem !important;
+
+          &:hover {
+            background: darken($brand-primary, 10%) !important;
+          }
+
+          &:after {
+            display: inline-block !important;
+            content: "" !important;
+            position: absolute !important;
+            top: -9px !important;
+            right: -8px !important;
+            width: 0 !important;
+            height: 0 !important;
+            border-bottom: 10px solid rgb(93, 93, 93) !important;
+            border-right: 8px solid rgba(0, 0, 0, 0) !important;
+
+          }
+        }
       }
     }
   }
-}
-@media only screen and (max-width: 382px ) {
-  // for a collapsed search field look at this: https://codepen.io/912lab/pen/LsplC
-  .header-group {
-    .member-services {
+
+  .mega-sticky-wrapper {
+    #mega-menu-wrap-primary_navigation {
+      .mega-menu-toggle {
+        height: 40px;
+        background: rgba(white, 0.8);
+
+        .mega-toggle-block-right {
+          position: fixed;
+          top: 0;
+          right: 2rem;
+        }
+      }
+    }
+  }
+
+  @media only screen and (max-width: 382px) {
+    // for a collapsed search field look at this: https://codepen.io/912lab/pen/LsplC
+    .header-group {
       .search-bar {
         padding: 0;
+
         .search-form {
           padding: 0;
           margin: 0;
+
           .form-control {
             padding: 0.2rem;
             border-radius: 0.25rem;
@@ -246,171 +237,167 @@
       }
     }
   }
-}
-@media only screen and (max-width: 575px) {
-  .header-group {
-    .member-services {
-      margin-top: 10px;
-      flex-direction: column;
-      .search-bar,
-      .account-login {
-        flex-shrink: 1;
-      }
+  @media only screen and (max-width: 575px) {
+    .header-group {
       .search-bar {
         padding: 0;
+
         .search-form {
           padding: 0;
           margin: 0;
-          .form-control {
-           //padding: 0.2rem;
-          }
         }
       }
     }
-  }
-  input:-moz-placeholder {
-    color: #999;
-  }
-  input::-webkit-input-placeholder {
-    color: #999;
-  }
-}
-
-@media only screen and (max-width: 599px ) {
-  // fix for menu in mobile
-
-  .main-nav {
-    .container {
-      padding: 0;
+    input:-moz-placeholder {
+      color: #999;
+    }
+    input::-webkit-input-placeholder {
+      color: #999;
     }
   }
 
-  #mega-menu-wrap-primary_navigation {
+  @media only screen and (max-width: 599px) {
+    // fix for menu in mobile
+
     .main-nav {
       .container {
         padding: 0;
       }
     }
-  }
-  .mega-menu-wrap {
-    .mega-menu-toggle {
-      padding: 0 15px;
-    }
-  }
 
-  // First Browse Item
-  #mega-menu-wrap-primary_navigation {
+    #mega-menu-wrap-primary_navigation {
+      .main-nav {
+        .container {
+          padding: 0;
+        }
+      }
+    }
+    .mega-menu-wrap {
+      .mega-menu-toggle {
+        padding: 0 15px;
+      }
+    }
+
+    // First Browse Item
+    #mega-menu-wrap-primary_navigation {
+      #mega-menu-primary_navigation {
+        & > .mega-browse__category {
+          margin-top: 0 !important;
+          border-top: 0 !important;
+        }
+      }
+    }
     #mega-menu-primary_navigation {
-      &>.mega-browse__category {
-        margin-top: 0 !important;
+      & > .mega-browse__category {
+        // have to force because of plugin
+
         border-top: 0 !important;
+        //border-bottom: 5px solid $brand-primary !important;
+        margin-top: 0 !important;
       }
     }
-  }
-  #mega-menu-primary_navigation {
-    &> .mega-browse__category {
-      // have to force because of plugin
 
-      border-top: 0 !important;
-      //border-bottom: 5px solid $brand-primary !important;
-      margin-top: 0 !important;
+  }
+  // @media maxwidth 599
+  @media only screen and (min-width: 992px) {
+    .navbar-collapse {
+      display: flex;
+      justify-content: flex-end;
     }
   }
+  @media only screen and (max-width: 991px) {
 
-} // @media maxwidth 599
-@media only screen and ( min-width: 992px ) {
-  .navbar-collapse {
-    display: flex;
-    justify-content: flex-end;
-  }
-}
-@media only screen and (max-width: 991px) {
+    .search-bar {
 
-  .search-bar {
-
-  }
-  .navbar-collapse {
-    display: block;
-  }
-  .navbar-toggleable-md>.container {
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 15px;
-    padding-right: 15px;
-  }
-  // before scrolling at header, control how menu displays
-  #mega-menu-wrap-primary_navigation {
-    #mega-menu-primary_navigation {
-      & > .mega-menu-item {
-        width: 30%;
-        float: left;
-        clear: right;
-      }
     }
-  }
-
-  // comes into play when user has scrolled below header
-  .mega-sticky-wrapper {
+    .navbar-collapse {
+      display: block;
+    }
+    .navbar-toggleable-md > .container {
+      margin-left: auto;
+      margin-right: auto;
+      padding-left: 15px;
+      padding-right: 15px;
+    }
+    // before scrolling at header, control how menu displays
     #mega-menu-wrap-primary_navigation {
-      .mega-menu-toggle {
-        height: 40px;
-        //background: rgba(black, 0.8);
-        .mega-toggle-block-right {
-          position: fixed;
-          top: 0;
-          width: 88px;
+      #mega-menu-primary_navigation {
+        & > .mega-menu-item {
+          width: 30%;
+          float: left;
+          clear: right;
         }
-        .mega-toggle-block-1 {
-          &::before {
-            color: white;
+      }
+    }
+
+    // comes into play when user has scrolled below header
+    .mega-sticky-wrapper {
+      #mega-menu-wrap-primary_navigation {
+        .mega-menu-toggle {
+          height: 40px;
+          //background: rgba(black, 0.8);
+          .mega-toggle-block-right {
+            position: fixed;
+            top: 0;
+            width: 88px;
           }
-          &::after {
-            color: white;
+
+          .mega-toggle-block-1 {
+            &::before {
+              color: white;
+            }
+
+            &::after {
+              color: white;
+            }
           }
         }
-      }
-      .mega-menu-item {
-        width: 30%;
-        float: left;
-        clear: right;
-      }
-    }
-  }
-}
-@media only screen and (max-width: 575px) {
-  .navbar-toggleable-md>.container {
-    margin-left: initial;
-    margin-right: initial;
-    padding-left: 15px;
-    padding-right: 15px;
-  }
-  .mega-sticky-wrapper {
-    #mega-menu-wrap-primary_navigation {
-      .mega-menu-toggle {
-        height: 40px;
-       // background: rgba(white, 0.8);
-        .mega-toggle-block {
-         //height: auto !important;
-        }
-        .mega-toggle-block-right {
-          position: fixed;
-          top: 0;
-          height: auto;
+
+        .mega-menu-item {
+          width: 30%;
+          float: left;
+          clear: right;
         }
       }
-      background: rgba(white, 0.9);
-      .mega-menu-item {
-        width: 50%;
-        float: left;
-        clear: right;
+    }
+  }
+  @media only screen and (max-width: 575px) {
+    .navbar-toggleable-md > .container {
+      margin-left: initial;
+      margin-right: initial;
+      padding-left: 15px;
+      padding-right: 15px;
+    }
+    .mega-sticky-wrapper {
+      #mega-menu-wrap-primary_navigation {
+        .mega-menu-toggle {
+          height: 40px;
+          // background: rgba(white, 0.8);
+          .mega-toggle-block {
+            //height: auto !important;
+          }
+
+          .mega-toggle-block-right {
+            position: fixed;
+            top: 0;
+            height: auto;
+          }
+        }
+
+        background: rgba(white, 0.9);
+
+        .mega-menu-item {
+          width: 50%;
+          float: left;
+          clear: right;
+        }
       }
     }
   }
-}
-@media only screen and ( max-width: 991px ) {
-  .search-form {
-    label {
-      margin-top: 1rem !important;
+  @media only screen and (max-width: 991px) {
+    .search-form {
+      label {
+        margin-top: 1rem !important;
+      }
     }
   }
-}
