Refactor request quote button * Add wrapper enclosing button and phone number * Targeting font styles for the .request-quote button * TODO - Move button to menu on mobile

--- a/wp-content/themes/soss-catalog-theme/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/soss-catalog-theme/assets/styles/layouts/_header.scss
@@ -46,6 +46,10 @@
   flex-direction: row;
   width: 100%;
 
+  .request-quote-wrapper > * {
+    font-size: 0.8rem;
+    font-weight: bolder;
+  }
   .request-quote {
     margin: 0; // over-rides .cta-brand
   }
