--- a/wp-content/themes/soss-catalog-theme/assets/styles/layouts/_frontpage.scss
+++ b/wp-content/themes/soss-catalog-theme/assets/styles/layouts/_frontpage.scss
@@ -29,45 +29,92 @@
 
 //  Block
 
-  // Mobile Stacked
-  @media (max-width: 630px) {
-    .category-ctas > li {
-      height: 100px;
-      overflow: hidden;
-      width: 100vw;
-      a {
-        align-items: center;
-        justify-content: center;
-        display: flex;
+
+  *, *:before, *:after {
+    box-sizing: inherit;
+  }
+  .clearfix {
+    &:before,
+    &:after {
+      content: '';
+      display: table;
+    }
+  }
+
+  .gallery-strip {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    width: 100vw;
+    max-height: 280px;
+    position: relative;
+    text-align: center;
+    max-width: 100vw;
+
+      > li {
+      float: left;
         position: relative;
-        width: 100%;
+        width: 12.5%;
+        z-index: 0;
+        border-width: 1px;
+        border-color: white;
+        > .border {
+          border-color: #fff;
+          border-style: solid;
+          border-width: 0 0 1px 1px;
+          height: 100%;
+          left: 0;
+          position: absolute;
+          top: 0;
+          width: 100%;
+          z-index: 2;
+        }
+        &:first-child > .border {
+          border-left: 0;
+        }
+        &:last-child > .border {
+          border-right: 0px;
+        }
         img {
-          width: auto;
+          max-width: 100%;
+          height: auto;
+        }
+    }
+  }
+  @media handheld, screen and (max-width: 1199px) {
+    .gallery-strip {
+      max-height: inherit;
+
+      li {
+        width: 25%;
+        &:nth-child(4n+1) {
+          clear: both;
         }
       }
     }
   }
-// flexbox gap not compatible on IE-11 (support ends June 2022)
 
+  // flexbox gap not compatible on IE-11 (support ends June 2022)
   .emulated-flex-gap > * {
     margin: 12px 0 0 1rem;
   }
   .emulated-flex-gap {
+    margin: -1rem 0 0 -1rem;
+    width: calc(100% + 1rem);
+  }
+  .category-ctas {
     align-items: center;
     display: inline-flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    margin: -1rem 0 0 -1rem;
-    width: calc(100% + 1rem);
-  }
-  .category-ctas {
     list-style: none;
     margin: 0;
     padding: 0;
 
     li {
 list-style: none;
+      max-width: 300px
     }
     a {
       display: block;
@@ -102,15 +149,38 @@ list-style: none;
         z-index: 10;
       }
       img {
+        display: flex;
         height: auto;
-        width: 300px;
-
+        max-width: 100%;
+        align-self: center;
       }
     }
   }
 
 }
-
+// Mobile Stacked
+@media handheld, screen and (max-width: 646px) {
+  .category-ctas > li {
+    height: 100px;
+    overflow: hidden;
+    width: 100vw;
+    max-width: max-content !important;
+    a {
+      align-items: center;
+      justify-content: center;
+      display: flex;
+      position: relative;
+      width: 100%;
+      img {
+        display: flex;
+        height: auto;
+        max-width: 100%;
+        justify-self: center;
+        align-self: center;
+      }
+    }
+  }
+}
 @media screen and (min-width: 1563px) {
 
   .break-out {
