--- a/wp-content/themes/soss-catalog-theme/assets/styles/layouts/_frontpage.scss
+++ b/wp-content/themes/soss-catalog-theme/assets/styles/layouts/_frontpage.scss
@@ -1,6 +1,10 @@
 .home {
   .wrap {
     padding: 0;
+    .content, .gallery-strip-block {
+      margin: 0;
+    }
+
   }
   video {
     width: 100% !important;
@@ -173,12 +177,10 @@ padding: 0 15px;
         position: relative;
         width: 12.5%;
         z-index: 0;
-        border-width: 1px;
-        border-color: white;
-        > .border {
+        > .gallery-border {
           border-color: #fff;
           border-style: solid;
-          border-width: 0 0 1px 1px;
+          border-width: 0 0 0.18rem 0.25rem;
           height: 100%;
           left: 0;
           position: absolute;
@@ -186,15 +188,18 @@ padding: 0 15px;
           width: 100%;
           z-index: 2;
         }
-        &:first-child > .border {
+        &:first-child > .gallery-border {
           border-left: 0;
         }
-        &:last-child > .border {
+        &:last-child > .gallery-border {
           border-right: 0;
         }
         img {
           max-width: 100%;
           height: auto;
+          overflow: hidden;
+          position: relative;
+          z-index: 0;
         }
     }
   }
