--- a/wp-content/themes/soss-catalog-theme/assets/styles/layouts/_frontpage.scss
+++ b/wp-content/themes/soss-catalog-theme/assets/styles/layouts/_frontpage.scss
@@ -65,29 +65,29 @@
   .homepage-slider-container {
     position: relative;
     z-index: 0;
-    .slide-content {
-      background: rgba(0,0,0, 0.5);
-      bottom: 30%;
-      display: flex;
-      flex-direction: row;
-      flex-wrap: nowrap;
-      justify-content: flex-start;
-      align-items: center;
-      height: 92px;
-      left: 0;
-      overflow: hidden;
-      padding: 0 9.2%;
-      position: absolute;
-      width: 100%;
-      z-index: 5;
-    }
+    //.slide-content {
+    //  background: rgba(0,0,0, 0.5);
+    //  bottom: 30%;
+    //  display: flex;
+    //  flex-direction: row;
+    //  flex-wrap: nowrap;
+    //  justify-content: flex-start;
+    //  align-items: center;
+    //  height: 92px;
+    //  left: 0;
+    //  overflow: hidden;
+    //  padding: 0 9.2%;
+    //  position: absolute;
+    //  width: 100%;
+    //  z-index: 5;
+    //}
     .slide-button-content {
       background: transparent;
-      bottom: 20%;
+      bottom: 2rem;
       display: flex;
       flex-direction: row;
       flex-wrap: nowrap;
-      justify-content: flex-start;
+      justify-content: center;
       align-items: center;
       position: absolute;
       left: 0;
