--- a/wp-content/themes/soss-catalog-theme/assets/styles/components/_buttons.scss
+++ b/wp-content/themes/soss-catalog-theme/assets/styles/components/_buttons.scss
@@ -68,6 +68,7 @@
   border-color: $brand-primary-dark !important;
   border-radius: 0.3rem !important;
   color: $brand-primary !important;
+  font-weight: 700;
   text-shadow: 1px 1px 2px #eae7e7;
   &:hover {
     background-color: darken($brand-primary, 10%) !important;
