--- a/wp-content/themes/soss-catalog-theme/assets/styles/main.scss
+++ b/wp-content/themes/soss-catalog-theme/assets/styles/main.scss
@@ -1,6 +1,17 @@
 
 // Import works even though it may look broken
-@import "~bootstrap/scss/bootstrap.scss";
+//@import "~bootstrap/scss/bootstrap.scss";
+// Required
+@import "~bootstrap/scss/functions";
+@import "~bootstrap/scss/variables";
+@import "~bootstrap/scss/mixins";
+
+// Optional
+@import "~bootstrap/scss/reboot";
+@import "~bootstrap/scss/type";
+@import "~bootstrap/scss/images";
+@import "~bootstrap/scss/code";
+@import "~bootstrap/scss/grid";
 
 // Required
 @import "common/variables";
