--- a/wp-content/themes/soss-catalog-theme/assets/styles/layouts/_footer.scss
+++ b/wp-content/themes/soss-catalog-theme/assets/styles/layouts/_footer.scss
@@ -23,6 +23,11 @@
     font-size: 0.9rem;
     color: $gray-light; // sets color of text other than a link
     margin: 0.5em 0;
+    display: flex;
+    align-items: center;
+    a {
+      margin-right: 1rem;
+    }
   }
   .address-list {
     margin-left: 6px;
