Disable legacy scss in main.scss

--- a/wp-content/themes/soss-catalog-theme/assets/styles/components/_buttons.scss
+++ b/wp-content/themes/soss-catalog-theme/assets/styles/components/_buttons.scss
@@ -63,7 +63,7 @@
   }
 }
 .cta-social {
-  background-color: $gray-light !important;
+  background-color: #e7e7e7 !important;
   transition: all 0.5s;
   border-color: $brand-primary-dark !important;
   border-radius: 0.3rem !important;
