--- a/wp-content/themes/soss-catalog-theme/assets/styles/main.scss
+++ b/wp-content/themes/soss-catalog-theme/assets/styles/main.scss
@@ -1,17 +1,6 @@
 
-// Import works even though it may look broken
-//@import "~bootstrap/scss/bootstrap.scss";
-// Required
-@import "~bootstrap/scss/functions";
-@import "~bootstrap/scss/variables";
-@import "~bootstrap/scss/mixins";
-
-// Optional
-@import "~bootstrap/scss/reboot";
-@import "~bootstrap/scss/type";
-@import "~bootstrap/scss/images";
-@import "~bootstrap/scss/code";
-@import "~bootstrap/scss/grid";
+// Import full library and PostCSS strips out in Mix
+@import "~bootstrap/scss/bootstrap.scss";
 
 // Required
 @import "common/variables";
@@ -19,15 +8,15 @@
 @import "components/buttons";
 @import "components/carousel";
 @import "components/popover";
-@import "components/comments";
+//@import "components/comments";
 @import "components/forms";
 @import "components/forms-base";
-@import "components/grid";
+//@import "components/grid";
 @import "components/wp-classes";
-@import "layouts/type";
+//@import "layouts/type";
 @import "components/revslider";
 @import "components/social-nav";
-@import "components/jumbotrons";
+//@import "components/jumbotrons";
 @import "components/business-info";
 @import "components/modal";
 @import "components/calc";
